# sveltedjangokdm

./: .gitignore  README.MD  docker-compose.yml  test.rest
backend/: db.sqlite3  docker-compose.yml  dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  temp.py
backend/base/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py  views_fbv.py
backend/base/migrations/: 0001_initial.py  0002_alter_cert_options_alter_dkdm_options.py  0002_job.py  0002_rename_kdmcert_cert_alter_cert_options_dkdm.py  0003_cert_display_name.py  0003_job_status_alter_job_id.py  0004_job_error.py  0005_alter_job_options_job_enddate_job_startdate_and_more.py  0006_alter_job_status.py  0007_job_outputdir.py  0008_kdm_job_kdm.py  0009_alter_kdm_id.py  0010_alter_kdm_display_name.py  0011_alter_job_kdm.py  0012_alter_kdm_file.py  0013_rename_uploaded_at_kdm_created_at.py
backend/base/services/: __init__.py  filecleanup.py
backend/media/kdms/: KDM_DKDM_ActionMovie_FTR-IMAX_Screen
backend/media/public/: public_leaf.pem
backend/staticfiles/: index.html
backend/staticfiles/assets/: index-B4AZkG6J.js  index-B5eWEPFp.js  index-B6lzDflu.js  index-BD5RRsR6.js  index-BMhb0XBI.css  index-BQgadCHc.js  index-BQsO6YCN.js  index-BaFm0YOU.js  index-Bo2Q0Q2p.js  index-By-kk0BI.js  index-C1loNXI9.css  index-C5S-G5xB.css  index-CGEEBdpq.css  index-CLby3wzw.js  index-Cgy2SYHn.css  index-D2l2NFtQ.css  index-D4mPFiKz.js  index-D54rgpep.css  index-DXKtR3Vm.js  index-Dem6eLZd.js  index-DjxhyhuC.css  (+6 more)
backend/sveltedjango/: asgi.py  settings.py  urls.py  wsgi.py
(+73 files in other folders)
