[tool.poetry]
name = "sveltedjango"
version = "0.1.0"
description = ""
authors = ["PixelOmen <PixelOmen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
load-dotenv = "^0.1.0"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
